# Hackathon-II

./: .gitignore  README.md  pyproject.toml
history/prompts/001-todo-console-app/: 001-implement-todo-console-app.green.prompt.md  002-enhance-with-rich.refactor.prompt.md
phase-1/: README.md  pyproject.toml
phase-1/.specify/memory/: constitution.md
phase-1/history/prompts/001-todo-console-app/: 002-create-feature-specification.spec.prompt.md  003-create-implementation-plan.plan.prompt.md  004-generate-task-breakdown.tasks.prompt.md  005-implement-todo-application.green.prompt.md
phase-1/history/prompts/constitution/: 001-create-phase-i-constitution.constitution.prompt.md
phase-1/specs/001-todo-console-app/: plan.md  spec.md  tasks.md
phase-1/specs/001-todo-console-app/checklists/: requirements.md
phase-1/src/: __init__.py  main.py
phase-1/src/cli/: __init__.py  cli.py
phase-1/src/models/: __init__.py  task.py
phase-1/src/services/: __init__.py  task_service.py
src/: main.py
src/cli/: cli.py
src/models/: task.py
src/services/: task_service.py
