[project]
name = "todo-console-app"
version = "1.0.0"
description = "In-Memory Python Console Todo Application - Phase I"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Hackathon II Participant"}
]

[project.urls]
Repository = "https://github.com/yourusername/todo-console-app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
